# Antipodal-Neural-Net

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EXECUTION_SUMMARY.md  IMPROVEMENTS.md  Makefile  PROJECT_INTENT.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  quick_smoke_test.py  requirements.txt
.github/workflows/: benchmark-smoke.yml  generate-artifacts.yml  lint.yml  tests.yml
docs/: API_CONTRACT.md
examples/: README.md  inference.py  train_simple.py
paper/: draft.tex  references.bib
scripts/: README.md  make_figures.py  make_tables.py  run_benchmark.py
src/: __init__.py  baselines.py  cli.py  data.py  losses.py  models.py  parity.py  seed.py
tests/: conftest.py  test_01_data_generator.py  test_02_parity_structure.py  test_03_forward_dynamics.py  test_04_gate_logic.py  test_05_loss_functions.py  test_06_training_stability.py  test_07_benchmark_performance.py  test_08_classical_baselines.py  test_09_visualization.py  test_10_reproducibility.py  test_11_regression.py  test_12_dimension_validation.py  test_13_seed_utilities.py  test_14_device_handling.py
